# mesh_layout_optimization

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
libs/: CMakeLists.txt
src/: Args.cpp  CMakeLists.txt  LayoutMaker.cpp  LayoutMaker.hpp  LayoutOptimizer.cpp  LayoutOptimizer.hpp  TriangleMesh.cpp  TriangleMesh.hpp  UnionFind.hpp  main.cpp
